--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,11 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
   FILES
+  PairwiseHeader.msg
+  CarMeasurement.msg
+  CarControl.msg
+  ConsensusMsg.msg
+  UWBRange.msg
 )
 
 ## Generate services in the 'srv' folder
